@@ -5,6 +5,10 @@
 mlUnit 1.9.3 (in development)
 -----------------------------
 
+  - Fix: Tests skipped during set_up don't tell the call stack any more.
+  - Fix: Proper encoding in jUnit reports. From MATLAB R2020a on, this
+    is UTF-8. On older MATLABs, it is ISO-8859-1.
+
 
 mlUnit 1.9.2 (2020-08-18)
 -------------------------
